--- a/PoC/tui-exploration/Cargo.toml
+++ b/PoC/tui-exploration/Cargo.toml
@@ -4,13 +4,35 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ratatui = "0.29"
-crossterm = "0.27"
+ratatui = "*"
+crossterm = "0.29"
 anyhow = "1.0"
 chrono = "0.4"
 rand = "0.8"
 image = { version = "0.25", default-features = false, features = ["png"] }
+tui-textarea = { path = "../../vendor/tui-textarea", features = ["search"] }
+tui-input = "0.10"
+crossbeam-channel = "0.5"
+ctrlc = "3.4"
+nucleo = "0.5"
+unicode-segmentation = "1.11"
+once_cell = "1.19"
+regex = "1.11"
+arboard = "3.4"
+thiserror = "1.0"
+unicode-width = "0.1"
+async-trait = "0.1"
+futures = "0.3"
+tokio-stream = "0.1"
+tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros", "test-util", "io-util"] }
+ah-repo = { path = "../../crates/ah-repo" }
+ah-workflows = { path = "../../crates/ah-workflows" }
+tempfile = "3.0"
 
 [dependencies.ratatui-image]
 version = "8"
 features = ["crossterm"]
+
+[[bin]]
+name = "tui-mvvm"
+path = "src/main_mvvm.rs"
