--- a/PoC/tui-exploration/Cargo.toml
+++ b/PoC/tui-exploration/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ratatui = "*"
-crossterm = { version = "0.29", features = ["serde"] }
+ratatui = "0.29"
+crossterm = { version = "0.28", features = ["serde"] }
 anyhow = "1.0"
 chrono = "0.4"
 rand = "0.8"
@@ -27,7 +27,9 @@ tokio-stream = "0.1"
 tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros", "test-util", "io-util"] }
 ah-repo = { path = "../../crates/ah-repo" }
 ah-workflows = { path = "../../crates/ah-workflows" }
+ah-core = { path = "../../crates/ah-core" }
 ah-domain-types = { path = "../../crates/ah-domain-types" }
+ah-tui = { path = "../../crates/ah-tui" }
 tempfile = "3.0"
 time = { version = "0.3", features = ["serde", "serde-well-known"] }
 serde = { version = "1.0", features = ["derive"] }
