--- a/PoC/tui-exploration/Cargo.toml
+++ b/PoC/tui-exploration/Cargo.toml
@@ -24,7 +24,13 @@ unicode-width = "0.1"
 async-trait = "0.1"
 futures = "0.3"
 tokio-stream = "0.1"
-tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros", "test-util", "io-util"] }
+tokio = { version = "1.0", features = [
+  "process",
+  "rt-multi-thread",
+  "macros",
+  "test-util",
+  "io-util",
+] }
 ah-repo = { path = "../../crates/ah-repo" }
 ah-workflows = { path = "../../crates/ah-workflows" }
 ah-core = { path = "../../crates/ah-core" }
