--- a/PoC/tui-exploration/Cargo.toml
+++ b/PoC/tui-exploration/Cargo.toml
@@ -36,6 +36,7 @@ ah-workflows = { path = "../../crates/ah-workflows" }
 ah-core = { path = "../../crates/ah-core" }
 ah-domain-types = { path = "../../crates/ah-domain-types" }
 ah-tui = { path = "../../crates/ah-tui" }
+ah-rest-mock-client = { path = "../../crates/ah-rest-mock-client" }
 tempfile = "3.0"
 time = { version = "0.3", features = ["serde", "serde-well-known"] }
 serde = { version = "1.0", features = ["derive"] }
