--- a/PoC/dydl-insert-libraries/agentfs-server/Cargo.toml
+++ b/PoC/dydl-insert-libraries/agentfs-server/Cargo.toml
@@ -8,7 +8,14 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "io-util", "fs", "macros"] }
+tokio = { version = "1.0", features = [
+  "rt",
+  "rt-multi-thread",
+  "net",
+  "io-util",
+  "fs",
+  "macros",
+] }
 anyhow = "1.0"
 libc = "0.2"
 agentfs-core = { path = "../../../crates/agentfs-core" }
